src/test/ui/error-codes/E0282.stderr
error[E0282]: type annotations needed
  --> $DIR/E0282.rs:2:38
   |
LL |     let x: _ = "hello".chars().rev().collect();
   |                                      ^^^^^^^ cannot infer type of the type parameter `B` declared on the associated function `collect`
   |
help: consider specifying the generic argument
   |
LL |     let x: _ = "hello".chars().rev().collect::<B>();
   |                                             +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
