src/test/ui/error-codes/E0282.rs
fn main() {
    let x: _ = "hello".chars().rev().collect(); //~ ERROR E0282
}
